# Team06_autonomous-vehicle

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Car.py  Controllerlog.txt  IMPLEMENTATION_COMPLETE.md  Jetcar.py  LANE_KEEPING_INTEGRATION.md  Motors.cpp  Motors.hpp  Piracer.py  README.md  REDESIGN_SUMMARY.md  SpeedSensor.cpp  a.out  backup_intr.txt  build.sh  jetcar.py  mwlog.txt  run_tests.sh  sensor_speed
.cursor/rules/: cpp.mdc
.github/: CICD.md
.github/workflows/: ci-cd-with-tests.yml  ci-cd-with-tests.yml.bak  cicd.yml  lab.yml  remote.yml  run-tests.yml.bak.old  test-deploy.yml
Arduino/: arduino_sensors.ino
CICD/: Dockerfile  README.md  cicd.yml  updatedockerimage.sh
ClusterDisplay/: README.md  a.out  test.cpp
ClusterDisplay/SourceCode/: CMakeLists.txt  CentralBoard.qml  main.cpp  main.qml  qml.qrc
ClusterDisplay/SourceCode/inc/: BatteryIconObj.hpp  DisplayData.hpp  QtSubscriber.hpp  SpeedometerObj.hpp  TestBattery.hpp  TestSpeedSensor.hpp  ZmqSubscriber.hpp
ClusterDisplay/SourceCode/src/: BatteryIconObj.cpp  QtSubscriber.cpp  SpeedometerObj.cpp  TestBattery.cpp  TestSpeedSensor.cpp  ZmqSubscriber.cpp
ClusterDisplay/SourceCode/ui/: BatteryIndicator.qml  InfoBar.qml  SimpleBar.qml  TimeLabel.qml
ClusterDisplay/SourceCode/ui/speedometer/: Speedometer.qml
ClusterDisplay/TestBuild/: .ninja_deps  .ninja_log  CMakeCache.txt  ClusterDisplay  ClusterDisplay.cbp  build.ninja  cmake_install.cmake
ClusterDisplay/TestBuild/.cmake/api/v1/reply/: cache-v2-473cb2ede6a17ca6e661.json  cmakeFiles-v1-94485abe281abccea372.json  codemodel-v2-ea1e16ac3b72ac5819e7.json  index-2025-01-13T16-49-53-0680.json  target-ClusterDisplay-Debug-578068b4216ef2a0ccd5.json  target-ClusterDisplay_autogen-Debug-ab3d061f3b9d7ebc19ce.json
ClusterDisplay/TestBuild/ClusterDisplay_autogen/: moc_predefs.h  mocs_compilation.cpp
ClusterDisplay/TestBuild/ClusterDisplay_autogen/DIG64O274K/: moc_BatteryIconObj.cpp  moc_QtSubscriber.cpp  moc_SpeedometerObj.cpp
ClusterDisplay/TestBuild/ClusterDisplay_autogen/EWIEGA46WW/: qrc_qml.cpp
Controller/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Controller/inc/: ControlTransmitter.hpp  Controller.hpp
Controller/src/: ControlTransmitter.cpp  Controller.cpp  main.cpp
Controllers/: CMakeLists.txt
Controllers/inc/: Controller.hpp  FServo.hpp
Controllers/src/: BackMotors.cpp  Controller.cpp  FServo.cpp  a.out  main.cpp
Middleware/: CMakeLists.txt  EMERGENCY_BRAKE_OPTIMIZATION.md  Makefile  README.md  cmake_install.cmake  notes.txt  subscriber.cpp  test_updated_multiplier
Middleware/.github/workflows/: cicd.yml
Middleware/inc/: BackMotors.hpp  Battery.hpp  BatteryReader.hpp  CAN.hpp  CanMessageBus.hpp  CanReader.hpp  ControlAssembly.hpp  ControlLogger.hpp  Distance.hpp  FServo.hpp  IPublisher.hpp  ISensor.hpp  LaneKeepingHandler.hpp  Middleware.hpp  MockBackMotors.hpp  MockBatteryReader.hpp  MockCanReader.hpp  MockFServo.hpp  MockPublisher.hpp  SensorHandler.hpp  SensorLogger.hpp  Speed.hpp  TrafficSignHandler.hpp
Middleware/src/: BackMotors.cpp  Battery.cpp  BatteryReader.cpp  CAN.cpp  CanMessageBus.cpp  CanReader.cpp  ControlAssembly.cpp  ControlLogger.cpp  Distance.cpp  FServo.cpp  LaneKeepingHandler.cpp  Main.cpp  Middleware.cpp  SensorHandler.cpp  SensorLogger.cpp  Speed.cpp  TrafficSignHandler.cpp  main.cpp
Middleware/test/: BackMotorsAdvancedTest.cpp  BackMotorsDirectTest.cpp  BackMotorsTest.cpp  BatteryReaderDirectTest.cpp  BatteryReaderTest.cpp  BatteryTest.cpp  CMakeLists.txt  CanMessageBusTest.cpp  CanReaderAdvancedTest.cpp  CanReaderDirectTest.cpp  CanReaderTest.cpp  ComprehensiveCoverageTest.cpp  ControlAssemblyAdvancedTest.cpp  ControlAssemblyTest.cpp  ControlLoggerTest.cpp  DistanceTest.cpp  FServoAdvancedTest.cpp  FServoDirectTest.cpp  FServoTest.cpp  IntegrationTest.cpp  LaneKeepingHandlerAdvancedTest.cpp  LaneKeepingHandlerTest.cpp  MainAdvancedTest.cpp  MainTest.cpp  PerformanceTest.cpp  README.md  SensorHandlerTest.cpp  SensorLoggerTest.cpp  SpeedTest.cpp  TestUtils.hpp  TrafficSignHandlerTest.cpp  ZmqPublisherTest.cpp
Middleware/test/unit/: battery_test.cpp
Middleware/vsstest/: units.yaml
Middleware/vsstest/ex/: mwmain.cpp  qtmain.cpp  steps.txt
OLED_displayer/: Display.cpp  Display.hpp  a.out  main.cpp  test.cpp  workingMain.c
can/: mcp2515.cpp
inc/: Logger.hpp
middleware/: can.sh  canvas.py
middleware/can/: can_send_speed.ino  main.cpp  mcp2515.h  mcp2515_test
middleware/inc/: BackMotors.hpp  Baterry.hpp  CarControl.hpp  ControlAssembly.hpp  Controller.hpp  FServo.hpp  SpeedSensor.hpp
middleware/inc/Luis/: Joystick.hpp  luis_main.hpp
middleware/src/: BackMotors.cpp  Baterry.cpp  CarControl.cpp  ControlAssembly.cpp  Controller.cpp  FServo.cpp  SpeedSensor.cpp  a.out  main.cpp
nano/: angle.py  battery.py  canvas.py  info.py  info_stats.py  main.py  main2.py  main3.py  main4.py  monitor.py  monitorstats.py  pad.py  servo.py  speed.py  stats.py  utils.py
nano/camera/: face-detect-usb.py  teste.py  usb-camera-gst.py  usb-camera-simple.py
nano/nano/: canvas.py  controller.py  jetcar.py  monitor.py  motor.py
nano/testes/: direction.py  motor.py  motor2.py  motor3.py  render.py  teste.py
scripts/: build.sh  fix_clang_headers.sh  run_coverage.sh  run_linters.sh  run_tests.sh
xc/: Dockerfile
xc/xctest/: CMakeLists.txt
xc/xctest.old/: Dockerfile  cross-env.sh
xc/xctest.old/teste/: hello  main.cpp
xc/xctest/inc/: ex02.hpp
xc/xctest/src/: ex02.cpp  main.cpp
zmq/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
zmq/inc/: ZmqPublisher.hpp  ZmqSubscriber.hpp
zmq/src/: ZmqPublisher.cpp  ZmqSubscriber.cpp
